readme file update

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 </head>
 <body>
 
-    <h1>CSS Tooltip</h1>
     <p>Lorem ipsum dolor sit amet. Sample <span data-tooltip="Tooltip is visible on this element">tooltip span here</span>, but not here... </p>
+    <p>
+        <a href="#" data-tooltip="Lorem ipsum dolor sit amet...">tootltip</a>
+    </p>
 
 </body>
 </html>
