--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>CSS Tooltip</title>
     <link rel="stylesheet" href="dist/css-tooltip.min.css" />
 <style media="screen">
+html, body {
+    margin: 1rem;
+}
 [data-tooltip]{
     border-bottom: dotted #999 1px;
 }
@@ -12,10 +15,25 @@
 </head>
 <body>
 
+    <h1>CSS Tooltip</h1>
     <p>Lorem ipsum dolor sit amet. Sample <span data-tooltip="Tooltip is visible on this element">tooltip span here</span>, but not here... </p>
+    <blockquote>
+        <p>
+            Lorem ipsum dolor sit amet ... <a href="#" data-tooltip="Lorem ipsum dolor sit amet...">tootltip</a>
+        </p>
+    </blockquote>
     <p>
-        <a href="#" data-tooltip="Lorem ipsum dolor sit amet...">tootltip</a>
+
+        <br> ...  <a href="#" data-tooltip="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vitae augue maximus" class="tooltip-multiline tooltip-bottom">tootltip multiline, tooltip bottom</a>
+         / <a href="#" data-tooltip="Lorem ipsum dolor sit amet..." class="tooltip-bottom-right">tootltip (bottom right)</a>
+        <br><a href="#" data-tooltip="Lorem ipsum dolor sit amet..." class="tooltip-bottom-left">tootltip (bottom left)</a>
     </p>
+
+    <ul>
+        <li><a href="#" data-tooltip="Lorem ipsum dolor sit amet" class="tooltip-top">Tooltip top (default)</a></li>
+        <li><a href="#" data-tooltip="Lorem ipsum dolor sit amet" class="tooltip-top-left">Tooltip top left</a> / ... / <a href="#" data-tooltip="Lorem ipsum dolor sit amet" class="tooltip-top-right">Tooltip top right</a></li>
+    </ul>
+
 
 </body>
 </html>
